--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,10 +14,15 @@
         android:layout_weight="1">
     </android.support.v7.widget.RecyclerView> -->
     <TextView
+        android:id="@+id/tv_content"
         android:text="内容"
-        android:textSize="30sp"
+        android:textSize="26sp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        android:layout_weight="1"
+        android:focusable="true"
+        android:gravity="top" />
 
     <FrameLayout
         android:id="@+id/fl_emoji"
