--- a/app/src/main/res/layout/fragmentemoji_main.xml
+++ b/app/src/main/res/layout/fragmentemoji_main.xml
@@ -51,13 +51,14 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:orientation="vertical"
+        android:visibility="gone"
         android:layout_weight="1">
-        <android.support.v4.view.ViewPager
+        <com.webber.androidemoji.widget.NoHorizontalScrollerViewPager
             android:id="@+id/vp_emoji"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1">
-        </android.support.v4.view.ViewPager>
+        </com.webber.androidemoji.widget.NoHorizontalScrollerViewPager>
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
