--- a/app/src/main/res/layout/item_content.xml
+++ b/app/src/main/res/layout/item_content.xml
@@ -3,14 +3,9 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/tv"
-        android:gravity="right"
-        android:textSize="18sp"
-        android:padding="10dp"
-        android:layout_gravity="center"
+    <com.webber.androidemoji.widget.ItemTextView
+        android:id="@+id/item_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Content"
-        />
+        android:visibility="gone"/>
 </LinearLayout>
