--- a/app/src/main/res/layout/fragmentemoji_main.xml
+++ b/app/src/main/res/layout/fragmentemoji_main.xml
@@ -13,9 +13,17 @@
         android:paddingTop="6dp"
         android:paddingBottom="6dp"
         android:paddingRight="5dp"
-        android:paddingLeft="10dp"
+        android:paddingLeft="8dp"
         android:orientation="horizontal">
 
+        <CheckBox
+            android:id="@+id/chk_voice"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="center_vertical"
+            android:button="@null"
+            android:layout_marginRight="7dp"
+            android:background="@drawable/checkbox_voice_keyboard"/>
         <EditText
             android:id="@+id/et_content"
             android:layout_width="0dp"
@@ -27,13 +35,14 @@
             android:layout_gravity="center_vertical"
             android:layout_weight="1"/>
 
+
         <CheckBox
             android:id="@+id/chb_emoji"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
             android:layout_gravity="center_vertical"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:button="@null"
             android:background="@drawable/checkbox_emotion_keyboard"
             android:clickable="true"/>
