--- a/app/src/main/res/drawable/voice_bg_button_pressed.xml
+++ b/app/src/main/res/drawable/voice_bg_button_pressed.xml
@@ -13,6 +13,6 @@
         android:width="1dp"
         android:color="#fbfbfb"/>
 
-    <solid android:color="@android:color/holo_green_light"/>
+    <solid android:color="@color/bg_voice_pressed"/>
 
 </shape>
