--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="colorAccent">#FF4081</color>
     <color name="bg_indicator_point_normal">#D8D8D8</color>
     <color name="bg_indicator_point_selected">#A6A6A6</color>
+    <color name="bg_voice_nomal">#DDDDDD</color>
+    <color name="bg_voice_pressed">#999999</color>
     <color name="bg_horizontal_btn_normal">#eeeeee</color>
     <color name="bg_horizontal_btn_selected">#70a3a4a7</color>
     <color name="bg_horizontal_line_color">#80a3a4a7</color>
