--- a/app/src/main/res/layout/voice_dialog.xml
+++ b/app/src/main/res/layout/voice_dialog.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="120dp"
     android:layout_height="120dp"
-    android:padding="20dp"
     android:layout_gravity="center"
-    android:gravity="center"
     android:background="@drawable/record_bg">
 
-    <ImageView  android:id="@+id/dialog_img"
-    			android:layout_width="wrap_content"
-    		   android:layout_height="wrap_content"
-    		   android:src="@drawable/record_animate_01"/>	      
+    <ImageView
+        android:id="@+id/dialog_img"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/record_animate_01" />
 
-</LinearLayout>
+    <TextView
+        android:id="@+id/tv_voice"
+        android:layout_width="wrap_content"
+        android:layout_height="20dp"
+        android:text="手指上划，取消发送"
+        android:textColor="#FFFFFF"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:textSize="12sp" />
+
+</RelativeLayout>
